--- a/campaign.html
+++ b/campaign.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenox</title>
     <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/custom/singleproduct.css">
+    <link rel="stylesheet" href="./css/custom/campaign.css">
 </head>
-
 <body>
     <header>
         <!-- icon and social link -->
@@ -41,10 +40,10 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="campaign.html">Campaign</a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link active" href="campaign.html">Campaign</a>
                         <a class="nav-link" href="blog.html">Blog</a>
-                        <a class="nav-link active" href="store.html">Store</a>
+                        <a class="nav-link" href="store.html">Store</a>
                         <a class="nav-link" href="contact.html">Contacts</a>
                     </div>
                     <div class="navbar-nav ml-auto">
@@ -65,8 +64,8 @@
         <div class="container head">
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb breadcrumb-style">
-                    <li class="breadcrumb-item "><a href="store.html">Store</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Single Product</li>
+                    <li class="breadcrumb-item "><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Campaign</li>
                 </ol>
                 <div class="row">
                     <div class="col-4 col-sm-4 col-md-3 col-lg-2">
@@ -101,149 +100,8 @@
     <main>
         <!-- title -->
         <section class='container title'>
-            <h1>Single Product</h1>
+            <h1>Campaign</h1>
         </section>
-        <!-- product show -->
-        <section>
-            <div class="container show-product">
-                <div class="row">
-                    <div class="col-md-6 col-lg-4">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="bImg">
-                                    <img src="./images/items/item8.jpg" alt="">
-                                <p class="zoom"><img src="./images/icons/wzoom.png" alt=""></p>
-                                </div>
-                            </div>
-                            <div class="col-3 col-sm-3 col-md-3 Simg">
-                                <img src="./images/items/item8_3.jpg" alt="">
-                            </div>
-                            <div class="col-3 col-sm-3 col-md-3 Simg">
-                                <img src="./images/items/item8_2.jpg" alt="">
-                            </div>
-                            <div class="col-3 col-sm-3 col-md-3 Simg">
-                                <img src="./images/items/item8_1.jpg" alt="">
-                            </div>
-                            <div class="col-3 col-sm-3 col-md-3 Simg">
-                                <img src="./images/items/item8_4.jpg" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-6">
-                        <h5>NICE BOTTLE WITH METAL COVER</h5>
-                        <div class="d-flex justify-content-between">
-                            <p><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></p>
-                            <p>(2 customer reviews)</p>
-                        </div>
-                        <h5>$20</h5>
-                        <small>
-                            High Quality Electroplated Metal Water Bottle Four Color Vacuum Double Wall Stainless Steel
-                            Water Bottle ECO Friendly BPA Free
-                        </small>
-                        <hr class="single">
-                        <p>Color :</p>
-                        <div class="color">
-                            <button class='c1'></button>
-                            <button class='c2'></button>
-                            <button class='c3'></button>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <p>Size :</p>
-                            <a class="anchor" href="">View size guide</a>
-                        </div>
-                        <div class="size">
-                            <button class='b1'>S</button>
-                            <button class='b2'>M</button>
-                            <button class='b3'>L</button>
-                        </div>
-                        <p>Quantity :</p>
-                        <select class="quantity" name="" id="">
-                            <option value="1">1</option>
-                        </select>
-                        <div class="row add">
-                            <div class="col-6 col-sm-6 col-md-6">
-                                <button type="button" class="btn btn-color"><img src="./images/icons/cart1.png" alt="">
-                                    Add to Cart</button>
-                            </div>
-                            <div class="col-6 col-sm-6 col-md-6">
-                                <button type="button" class="btn d-flex align-items-center">
-                                    <img src="./images/icons/bfavourite.png" alt="">
-                                    Add to Wishlist
-                                </button>
-                            </div>
-                        </div>
-                        <hr class="single">
-                        <div class="info">
-                            <p>Sku: <span>123456789</span></p>
-                            <p>Category : <span>Gifts</span></p>
-                            <p>Tags : <span>Tunks,Blog,Print,Book,Gift</span></p>
-                        </div>
-                        <p class="share">Share :
-                            <img src="./images/icons/bfacebook.png" />
-                            <img src="./images/icons/byoutube.png" />
-                            <img src="./images/icons/bgoogle.png" />
-                            <img src="./images/icons/btwitter.png" />
-                        </p>
-                    </div>
-                </div>
-                <div class="row people-review">
-                    <div class="col-md-12 review-button">
-                        <button type="button" class="">Information</button>
-                        <button type="button" class="">Reviews(2)</button>
-                        <hr class="rev-hr">
-                    </div>
-                    <div class="col-3 col-sm-3 col-md-2 ">
-                        <img src="./images/peoples/people1.jpeg" alt="">
-                    </div>
-                    <div class="col-9 col-sm-9 col-md-10 text-review">
-                        <div class="d-flex justify-content-between">
-                            <h6>Fatil Khan</h6>
-                            <p><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></p>
-                        </div>
-                        <p class="date">july 26,2016 | 2.00 pm <img src="./images/icons/bforward.png" alt=""> </p>
-                        <small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem debitis temporibus
-                            ipsam
-                            architecto sint quae, iure nulla recusandae exercitationem eveniet.</small>
-                    </div>
-
-                    <div class="col-3 col-sm-3 col-md-2">
-                        <img src="./images/peoples/people1.jpeg" alt="">
-                    </div>
-                    <div class="col-9 col-sm-9 col-md-10 text-review">
-                        <div class="d-flex justify-content-between">
-                            <h6>Rahat Khan</h6>
-                            <p><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></p>
-                        </div>
-                        <p class="date">july 26,2016 | 2.00 pm <img src="./images/icons/bforward.png" alt=""> </p>
-                        <small>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem debitis temporibus
-                            ipsam
-                            architecto sint quae, iure nulla recusandae exercitationem eveniet.</small>
-                    </div>
-                </div>
-                <div class="row review">
-                    <div class="col-md-12">
-                        <h5>Leave your review:</h5>
-                        <small>Rate Product</small>
-                        <p><span>☆</span><span>☆</span><span>☆</span><span>☆</span><span>☆</span></p>
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-6 bg">
-                    <form action="">
-                        <input type="text" placeholder="Name">
-                    </div>
-                    <div class="col-6 col-sm-6 col-md-6 bgg">
-                        <input type="email" placeholder="Email">
-                    </div>
-                    <div class="col-md-12 bgg">
-                        <textarea placeholder="Message" name="" id="" rows="3"></textarea>
-                    </div>
-                    <div class="col-md-12 bg">
-                        <input type="submit" value="Send">
-                    </div>
-                    </form>
-                </div>
-            </div>
-        </section>
-
     </main>
     <footer>
         <div class='footer'>
@@ -319,7 +177,7 @@
             </section>
         </div>
     </footer>
-    <script src='./js/custom/singleproduct.js'></script>
+    <script src='./js/custom/campaign.js'></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
