--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#campaign">Campaign</a>
+                            <a class="nav-link" href="campaign.html">Campaign</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#blog">Blog</a>
+                            <a class="nav-link" href="blog.html">Blog</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="store.html">Store</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#contacts">Contacts</a>
+                            <a class="nav-link" href="contact.html">Contacts</a>
                         </li>
                     </ul>
                     <div class="navbar-nav ml-auto">
