--- a/store.html
+++ b/store.html
@@ -43,10 +43,10 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link " href="index.html">Home <span class="sr-only">(current)</span></a>
-                        <a class="nav-link" href="#campaign">Campaign</a>
-                        <a class="nav-link" href="#blog">Blog</a>
+                        <a class="nav-link" href="campaign.html">Campaign</a>
+                        <a class="nav-link" href="blog.html">Blog</a>
                         <a class="nav-link active" href="store.html">Store</a>
-                        <a class="nav-link" href="#contacts">Contacts</a>
+                        <a class="nav-link" href="contact.html">Contacts</a>
                     </div>
                     <div class="navbar-nav ml-auto">
                         <a class="nav-link" href="wishlist.html">
