--- a/campaign.html
+++ b/campaign.html
@@ -102,6 +102,72 @@
         <section class='container title'>
             <h1>Campaign</h1>
         </section>
+        <!-- campaign -->
+        <section>
+            <div class="campaign container">
+                <br>
+                <h3>Our Campaigns :</h3>
+                <br>
+                <div class="row">
+                    <div class="col-8 col-sm-8 col-md-5 big">
+                        <img src="./images/items/campaign1.jpg" alt="">
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-3 small">
+                        <img src="./images/items/campaign2.jpg" alt="">
+                        <img src="./images/items/campaign3.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4">
+                       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, recusandae impedit nemo soluta incidunt est similique sunt dicta vero quasi labore, praesentium saepe perferendis cumque quas a! Voluptas, facilis quis?</p>
+                       <a href="#">Read more</a>
+                    </div>
+                </div>
+                <hr>
+                <br>
+                <div class="row">
+                    <div class="col-8 col-sm-8 col-md-5 big">
+                        <img src="./images/items/campaign4.jpg" alt="">
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-3 small">
+                        <img src="./images/items/campaign5.jpg" alt="">
+                        <img src="./images/items/campaign6.png" alt="">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4">
+                       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, recusandae impedit nemo soluta incidunt est similique sunt dicta vero quasi labore, praesentium saepe perferendis cumque quas a! Voluptas, facilis quis?</p>
+                       <a href="#">Read more</a>
+                    </div>
+                </div>
+                <hr>
+                <br>
+                <div class="row">
+                    <div class="col-8 col-sm-8 col-md-5 big">
+                        <img src="./images/items/campaign9.jpg" alt="">
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-3 small">
+                        <img src="./images/items/campaign8.jpg" alt="">
+                        <img src="./images/items/campaign7.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4">
+                       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, recusandae impedit nemo soluta incidunt est similique sunt dicta vero quasi labore, praesentium saepe perferendis cumque quas a! Voluptas, facilis quis?</p>
+                       <a href="#">Read more</a>
+                    </div>
+                </div>
+                <hr>
+                <br>
+                <div class="row">
+                    <div class="col-8 col-sm-8 col-md-5 big">
+                        <img src="./images/items/campaign10.jpg" alt="">
+                    </div>
+                    <div class="col-4 col-sm-4 col-md-3 small">
+                        <img src="./images/items/campaign11.jpeg" alt="">
+                        <img src="./images/items/campaign12.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-sm-12 col-md-4">
+                       <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, recusandae impedit nemo soluta incidunt est similique sunt dicta vero quasi labore, praesentium saepe perferendis cumque quas a! Voluptas, facilis quis?</p>
+                       <a href="#">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class='footer'>
