--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/custom/contact.css">
 </head>
+
 <body>
     <header>
         <!-- icon and social link -->
@@ -53,7 +54,9 @@
                         <a class="nav-link cart-view cart-items-number">
                             <img id="cart-button" src="./images/icons/cart.png" alt="">
                             <div class="show-number">
-                                <span class="cart-size"><p id="cart-size-number">2</p></span>
+                                <span class="cart-size">
+                                    <p id="cart-size-number">2</p>
+                                </span>
                             </div>
                         </a>
                     </div>
@@ -105,6 +108,43 @@
         <section class='container'>
             <div class="map">
                 <img src="./images/items/dhakamap.PNG" alt="">
+            </div>
+            <div class="give-info">
+                <div class="row">
+                    <div class="col-md-6">
+                        <br>
+                        <h3>Contact US : </h3>
+                        <p></p>
+                        <div class="info">
+                            <p>Email us at <strong>mail@gmail.com</strong></p>
+                            <p>Our phone number is <strong>8005958212</strong></p>
+                            <p>Find us :</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, repellat.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <br>
+                        <h3>Give us a Feedback: </h3>
+                        <p></p>
+                        <div class="row info">
+                            <div class="col-6 col-sm-6 col-md-6 bg">
+                                <form action="">
+                                    <input type="text" placeholder="Name">
+                                </div>
+                                <div class="col-6 col-sm-6 col-md-6 ">
+                                    <input type="email" placeholder="Email">
+                                </div>
+                                <div class="col-md-12 ">
+                                    <textarea placeholder="Message" name="" id="" rows="3"></textarea>
+                                </div>
+                                <div class="col-md-12 btn-send">
+                                    <input  type="submit" value="Send">
+                                </div>
+                                </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
             </div>
         </section>
     </main>
