--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./images/icons/icon.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="./css/custom/index.css">
     <title>Lenox</title>
@@ -72,22 +73,20 @@
                       <div class="row">
                           <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="row">
-                                <div class="col-3 col-sm-3 col-md-4">
-
+                                <div class="col-2 col-sm-2 col-md-4">
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-8">
+                                <div class="col-9 col-sm-9 col-md-8">
                                     <small>what you're</small>
                                     <h3>Looking for</h3>
                                     <a class="a-image" href="">Go to shop <img src="./images/icons/arrow.png" alt=""></a>
+                                    <p></p>
                                 </div>
-                                <div class="col-3 col-sm-3 col-md-2">
+                                <div class="col-2 col-sm-2 col-md-4">
                                 </div>
-                                <div class="col-2 col-sm-2 col-md-2">
-                                </div>
-                                <div class="col-7 col-sm-7 col-md-7 ccs">
+                                <div class="col-8 col-sm-8 col-md-7 ccs">
                                     <img class="d-block w-100" src="./images/items/carousel1.jpg" alt="First slide">
                                 </div>
-                                <div class="col-2 col-sm-2 col-md-2">
+                                <div class="col-2 col-sm-2 col-md-1">
                                 </div>
                             </div>
                           </div>
@@ -106,25 +105,23 @@
                   <div class="carousel-item">
                     <div class="row">
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6">
-                          <div class="row">
-                              <div class="col-3 col-sm-3 col-md-4">
-
-                              </div>
-                              <div class="col-6 col-sm-6 col-md-8">
-                                  <small>what you're</small>
-                                  <h3>Looking for</h3>
-                                  <a class="a-image" href="">Go to shop <img src="./images/icons/arrow.png" alt=""></a>
-                              </div>
-                              <div class="col-3 col-sm-3 col-md-2">
-                              </div>
-                              <div class="col-2 col-sm-2 col-md-2">
-                              </div>
-                              <div class="col-7 col-sm-7 col-md-7 ccs">
-                                  <img class="d-block w-100" src="./images/items/item11.jpg" alt="First slide">
-                              </div>
-                              <div class="col-2 col-sm-2 col-md-2">
-                              </div>
-                          </div>
+                            <div class="row">
+                                <div class="col-2 col-sm-2 col-md-4">
+                                </div>
+                                <div class="col-9 col-sm-9 col-md-8">
+                                    <small>what you're</small>
+                                    <h3>Looking for</h3>
+                                    <a class="a-image" href="">Go to shop <img src="./images/icons/arrow.png" alt=""></a>
+                                    <p></p>
+                                </div>
+                                <div class="col-2 col-sm-2 col-md-4">
+                                </div>
+                                <div class="col-8 col-sm-8 col-md-7 ccs">
+                                    <img class="d-block w-100" src="./images/items/item11.jpg" alt="First slide">
+                                </div>
+                                <div class="col-2 col-sm-2 col-md-1">
+                                </div>
+                            </div>
                         </div>
                         <br>
                         <div class="col-12 col-sm-12 col-md-6 col-lg-6 ccb">
@@ -142,22 +139,20 @@
                         <div class="row">
                           <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="row">
-                                <div class="col-3 col-sm-3 col-md-4">
-
+                                <div class="col-2 col-sm-2 col-md-4">
                                 </div>
-                                <div class="col-6 col-sm-6 col-md-8">
+                                <div class="col-9 col-sm-9 col-md-8">
                                     <small>what you're</small>
                                     <h3>Looking for</h3>
                                     <a class="a-image" href="">Go to shop <img src="./images/icons/arrow.png" alt=""></a>
+                                    <p></p>
                                 </div>
-                                <div class="col-3 col-sm-3 col-md-2">
+                                <div class="col-2 col-sm-2 col-md-4">
                                 </div>
-                                <div class="col-2 col-sm-2 col-md-2">
-                                </div>
-                                <div class="col-7 col-sm-7 col-md-7 ccs">
+                                <div class="col-8 col-sm-8 col-md-7 ccs">
                                     <img class="d-block w-100" src="./images/items/carousel5.jpg" alt="First slide">
                                 </div>
-                                <div class="col-2 col-sm-2 col-md-2">
+                                <div class="col-2 col-sm-2 col-md-1">
                                 </div>
                             </div>
                           </div>
